[project]
urls = { Repository = "https://github.com/lumina37/rotate-captcha-crack" }
name = "rotate-captcha-crack"
readme = "README.md"
requires-python = ">=3.9,<3.13"
authors = [{ name = "lumina37", email = "starry.qvq@gmail.com" }]
dependencies = ["torch", "torchvision", "matplotlib", "tqdm", "tomli;python_version<'3.11'"]
dynamic = ["version"]

[project.optional-dependencies]
server = ["aiohttp"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.version]
path = "rotate_captcha_crack/__version__.py"

[tool.uv]
managed = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]
torchvision = [{ index = "pytorch-cu124", marker = "platform_system != 'Darwin'" }]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py38"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "YTT",
    "ASYNC",
    "B",
    "A",
    "COM",
    "C4",
    "FA",
    "PIE",
    "PT",
    "RSE",
    "NPY",
    "PERF",
    "FURB",
]
ignore = ["E402", "E501", "COM812"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
