[project]
name = "rotate-captcha-crack"
version = "0.6.0a1"
authors = [{ name = "lumina37", email = "starry.qvq@gmail.com" }]
urls = { Repository = "https://github.com/lumina37/rotate-captcha-crack" }
dependencies = ["torch", "torchvision", "matplotlib", "tqdm", "tomli;python_version<'3.11'"]
requires-python = ">=3.9,<3.14"
readme = "README.md"

[project.optional-dependencies]
server = ["aiohttp"]

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"

[tool.uv]
managed = true

[tool.uv.sources]
torch = [{ index = "pytorch-cu128", marker = "platform_system != 'Darwin'" }]
torchvision = [{ index = "pytorch-cu128", marker = "platform_system != 'Darwin'" }]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.format]
quote-style = "preserve"

[tool.ruff.lint]
select = [
    "F",
    "E",
    "W",
    "I",
    "UP",
    "YTT",
    "ASYNC",
    "B",
    "A",
    "C4",
    "FA",
    "ICN",
    "LOG",
    "PIE",
    "PT",
    "Q",
    "RSE",
    "SLOT",
    "TC",
    "PTH",
    "NPY",
    "PERF",
    "FURB",
]
ignore = ["A005", "E402", "E501", "E266", "COM812"]

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F401"]
